--- a/src/App.css
+++ b/src/App.css
@@ -58,13 +58,15 @@
 /*ContactList Css*/
 .list{
   font-size:20px;
-  font-weight: 600;
-  margin-top: 50px;
-  margin-left: 12px; 
+  margin-bottom: 2px;
+  margin-left: 200px; 
+  margin-right: 200px;
   display: flex;
-  justify-content:space-around;
+  justify-content:space-between;
+  border: 1px solid;
+  border-radius: 8px;
+  background-color: antiquewhite;
   align-items: center;
-  gap: 2;
 }
 .head{
   font-size: 25px;
